// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectsTab.vue Test fetchWorkpackages adds every work-package only once 1`] = `
<div class="" id="openproject-linked-workpackages">
  <div class="existing-relations">
    integration_openproject
  </div>
  <div class="linked-workpackages">
    <div class="linked-workpackages--workpackage">
      <div class="workpackage linked-workpackages--workpackage--item" id="workpackage-123">
        <div class="row">
          <div class="row__status">
            <div class="row__status__title">
              open
            </div>
          </div>
          <div class="row__workpackage">
            #123 - a big project
          </div>
        </div>
        <div class="row">
          <div class="row__subject"><span class="row__subject__type">
				Task
			</span>
            my task
          </div>
        </div>
        <div class="row">
          <div class="row__assignee">
            <div class="row__assignee__avatar">
              <avatar-stub size="23" url="http://localhost/apps/integration_openproject/avatar?userId=1&amp;userName=Bal Bahadur Pun" user="Bal Bahadur Pun" display-name="Bal Bahadur Pun" class="item-avatar"></avatar-stub>
            </div>
            <div class="row__assignee__assignee">
              Bal Bahadur Pun
            </div>
          </div>
        </div>
      </div> <button data-v-2a98ba3b="" rel="nofollow noreferrer noopener" class="action-item action-item--single icon-noConnection linked-workpackages--workpackage--unlinkactionbutton undefined has-tooltip" aria-label="" icon="icon-noConnection" data-original-title="">
        <!---->



        <span data-v-2a98ba3b="" aria-hidden="true" hidden="hidden"><li data-v-ef50c406="" class="action linked-workpackages--workpackage--unlinkactionbutton" data-v-2a98ba3b=""><button data-v-ef50c406="" aria-label="" type="button" class="action-button focusable"><span data-v-ef50c406="" class="action-button__icon icon-noConnection"></span> <span data-v-ef50c406="" class="action-button__text">Unlink WorkPackage</span>
        <!---->
      </button></li></span></button>
    </div>
    <div class=""></div>
  </div>
</div>
`;

exports[`ProjectsTab.vue Test fetchWorkpackages sets the "error" state if the admin config is not okay 1`] = `
<div class="projects projects--empty">
  <!---->
  <div class="empty-content" id="openproject-empty-content">
    <div class="empty-content--wrapper">
      <div class="empty-content--icon"><img src="" alt="error"></div>
      <!---->
      <div class="empty-content--connect-button">
        <div class="oauth-connect--message">
          Some OpenProject integration application settings are not working. Please contact your Nextcloud administrator.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectsTab.vue Test fetchWorkpackages shows the linked workpackages 1`] = `
<div class="" id="openproject-linked-workpackages">
  <div class="existing-relations">
    integration_openproject
  </div>
  <div class="linked-workpackages">
    <div class="linked-workpackages--workpackage">
      <div class="workpackage linked-workpackages--workpackage--item" id="workpackage-123">
        <div class="row">
          <div class="row__status" style="background-color: rgb(165, 216, 255);">
            <div class="row__status__title">
              open
            </div>
          </div>
          <div class="row__workpackage">
            #123 - a big project
          </div>
        </div>
        <div class="row">
          <div class="row__subject"><span class="row__subject__type" style="color: rgb(0, 176, 240);">
				Task
			</span>
            my task
          </div>
        </div>
        <div class="row">
          <div class="row__assignee">
            <div class="row__assignee__avatar">
              <avatar-stub size="23" url="http://localhost/apps/integration_openproject/avatar?userId=1&amp;userName=Bal Bahadur Pun" user="Bal Bahadur Pun" display-name="Bal Bahadur Pun" class="item-avatar"></avatar-stub>
            </div>
            <div class="row__assignee__assignee">
              Bal Bahadur Pun
            </div>
          </div>
        </div>
      </div> <button data-v-2a98ba3b="" rel="nofollow noreferrer noopener" class="action-item action-item--single icon-noConnection linked-workpackages--workpackage--unlinkactionbutton undefined has-tooltip" aria-label="" icon="icon-noConnection" data-original-title="">
        <!---->



        <span data-v-2a98ba3b="" aria-hidden="true" hidden="hidden"><li data-v-ef50c406="" class="action linked-workpackages--workpackage--unlinkactionbutton" data-v-2a98ba3b=""><button data-v-ef50c406="" aria-label="" type="button" class="action-button focusable"><span data-v-ef50c406="" class="action-button__icon icon-noConnection"></span> <span data-v-ef50c406="" class="action-button__text">Unlink WorkPackage</span>
        <!---->
      </button></li></span></button>
    </div>
    <div class="workpackage-seperator"></div>
  </div>
  <div class="linked-workpackages">
    <div class="linked-workpackages--workpackage">
      <div class="workpackage linked-workpackages--workpackage--item" id="workpackage-589">
        <div class="row">
          <div class="row__status" style="background-color: rgb(165, 216, 255);">
            <div class="row__status__title">
              प्रगति हुदैछ
            </div>
          </div>
          <div class="row__workpackage">
            #589 - नेपालको विकास गर्ने
          </div>
        </div>
        <div class="row">
          <div class="row__subject"><span class="row__subject__type" style="color: rgb(0, 176, 240);">
				Epic
			</span>
            नेपालमा IT उद्योग बनाउने
          </div>
        </div>
        <div class="row">
          <div class="row__assignee">
            <div class="row__assignee__avatar">
              <avatar-stub size="23" url="http://localhost/apps/integration_openproject/avatar?userId=13&amp;userName=कुमारी नेपाली" user="कुमारी नेपाली" display-name="कुमारी नेपाली" class="item-avatar"></avatar-stub>
            </div>
            <div class="row__assignee__assignee">
              कुमारी नेपाली
            </div>
          </div>
        </div>
      </div> <button data-v-2a98ba3b="" rel="nofollow noreferrer noopener" class="action-item action-item--single icon-noConnection linked-workpackages--workpackage--unlinkactionbutton undefined has-tooltip" aria-label="" icon="icon-noConnection" data-original-title="">
        <!---->



        <span data-v-2a98ba3b="" aria-hidden="true" hidden="hidden"><li data-v-ef50c406="" class="action linked-workpackages--workpackage--unlinkactionbutton" data-v-2a98ba3b=""><button data-v-ef50c406="" aria-label="" type="button" class="action-button focusable"><span data-v-ef50c406="" class="action-button__icon icon-noConnection"></span> <span data-v-ef50c406="" class="action-button__text">Unlink WorkPackage</span>
        <!---->
      </button></li></span></button>
    </div>
    <div class=""></div>
  </div>
</div>
`;

exports[`ProjectsTab.vue Test fetchWorkpackages shows the linked workpackages 2`] = `
<div class="" id="openproject-linked-workpackages">
  <div class="existing-relations">
    integration_openproject
  </div>
  <div class="linked-workpackages">
    <div class="linked-workpackages--workpackage">
      <div class="workpackage linked-workpackages--workpackage--item" id="workpackage-123">
        <div class="row">
          <div class="row__status">
            <div class="row__status__title">
              open
            </div>
          </div>
          <div class="row__workpackage">
            #123 - a big project
          </div>
        </div>
        <div class="row">
          <div class="row__subject"><span class="row__subject__type">
				Task
			</span>
            my task
          </div>
        </div>
        <div class="row">
          <div class="row__assignee">
            <div class="row__assignee__avatar">
              <avatar-stub size="23" url="http://localhost/apps/integration_openproject/avatar?userId=1&amp;userName=Bal Bahadur Pun" user="Bal Bahadur Pun" display-name="Bal Bahadur Pun" class="item-avatar"></avatar-stub>
            </div>
            <div class="row__assignee__assignee">
              Bal Bahadur Pun
            </div>
          </div>
        </div>
      </div> <button data-v-2a98ba3b="" rel="nofollow noreferrer noopener" class="action-item action-item--single icon-noConnection linked-workpackages--workpackage--unlinkactionbutton undefined has-tooltip" aria-label="" icon="icon-noConnection" data-original-title="">
        <!---->



        <span data-v-2a98ba3b="" aria-hidden="true" hidden="hidden"><li data-v-ef50c406="" class="action linked-workpackages--workpackage--unlinkactionbutton" data-v-2a98ba3b=""><button data-v-ef50c406="" aria-label="" type="button" class="action-button focusable"><span data-v-ef50c406="" class="action-button__icon icon-noConnection"></span> <span data-v-ef50c406="" class="action-button__text">Unlink WorkPackage</span>
        <!---->
      </button></li></span></button>
    </div>
    <div class="workpackage-seperator"></div>
  </div>
  <div class="linked-workpackages">
    <div class="linked-workpackages--workpackage">
      <div class="workpackage linked-workpackages--workpackage--item" id="workpackage-589">
        <div class="row">
          <div class="row__status">
            <div class="row__status__title">
              प्रगति हुदैछ
            </div>
          </div>
          <div class="row__workpackage">
            #589 - नेपालको विकास गर्ने
          </div>
        </div>
        <div class="row">
          <div class="row__subject"><span class="row__subject__type">
				Epic
			</span>
            नेपालमा IT उद्योग बनाउने
          </div>
        </div>
        <div class="row">
          <div class="row__assignee">
            <div class="row__assignee__avatar">
              <avatar-stub size="23" url="http://localhost/apps/integration_openproject/avatar?userId=13&amp;userName=कुमारी नेपाली" user="कुमारी नेपाली" display-name="कुमारी नेपाली" class="item-avatar"></avatar-stub>
            </div>
            <div class="row__assignee__assignee">
              कुमारी नेपाली
            </div>
          </div>
        </div>
      </div> <button data-v-2a98ba3b="" rel="nofollow noreferrer noopener" class="action-item action-item--single icon-noConnection linked-workpackages--workpackage--unlinkactionbutton undefined has-tooltip" aria-label="" icon="icon-noConnection" data-original-title="">
        <!---->



        <span data-v-2a98ba3b="" aria-hidden="true" hidden="hidden"><li data-v-ef50c406="" class="action linked-workpackages--workpackage--unlinkactionbutton" data-v-2a98ba3b=""><button data-v-ef50c406="" aria-label="" type="button" class="action-button focusable"><span data-v-ef50c406="" class="action-button__icon icon-noConnection"></span> <span data-v-ef50c406="" class="action-button__text">Unlink WorkPackage</span>
        <!---->
      </button></li></span></button>
    </div>
    <div class=""></div>
  </div>
</div>
`;

exports[`ProjectsTab.vue Test onSave shows the just linked workpackage 1`] = `
<div id="openproject-linked-workpackages">
  <div class="existing-relations">
    integration_openproject
  </div>
  <div class="linked-workpackages">
    <div class="linked-workpackages--workpackage">
      <div class="workpackage linked-workpackages--workpackage--item workpackage-transition" id="workpackage-1">
        <div class="row">
          <div class="row__status" style="background-color: blue;">
            <div class="row__status__title">
              in-progress
            </div>
          </div>
          <div class="row__workpackage">
            #1 - test
          </div>
        </div>
        <div class="row">
          <div class="row__subject"><span class="row__subject__type" style="color: red;">
				task
			</span>
            Organize work-packages
          </div>
        </div>
        <div class="row">
          <div class="row__assignee">
            <div class="row__assignee__avatar">
              <avatar-stub size="23" url="/server/index.php/apps/integration_openproject/avatar?userId=1&amp;userName=System" user="test" display-name="test" class="item-avatar"></avatar-stub>
            </div>
            <div class="row__assignee__assignee">
              test
            </div>
          </div>
        </div>
      </div> <button data-v-2a98ba3b="" rel="nofollow noreferrer noopener" class="action-item action-item--single icon-noConnection linked-workpackages--workpackage--unlinkactionbutton undefined has-tooltip" aria-label="" icon="icon-noConnection" data-original-title="">
        <!---->



        <span data-v-2a98ba3b="" aria-hidden="true" hidden="hidden"><li data-v-ef50c406="" class="action linked-workpackages--workpackage--unlinkactionbutton" data-v-2a98ba3b=""><button data-v-ef50c406="" aria-label="" type="button" class="action-button focusable"><span data-v-ef50c406="" class="action-button__icon icon-noConnection"></span> <span data-v-ef50c406="" class="action-button__text">Unlink WorkPackage</span>
        <!---->
      </button></li></span></button>
    </div>
    <div class=""></div>
  </div>
</div>
`;
